workspace_errors_9.txt
cargo : warning: 
unused imports: 
`Ed25519SecretKey`, 
`MlKem768DecapsKey`, 
and `X25519SecretKey`
At line:1 char:1
+ cargo check 
--workspace --offline 
2>&1 | Out-File 
-FilePath workspace ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (warning: unus   
 ed...25519SecretKe    
y`:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
 --> zero-identity\src\
keypair.rs:5:42
  |
5 | 
...:{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey},
  |                    
                  
^^^^^^^^^^^^^^^
6 | ...h::blake2b_256,
7 | ...::{MlKem768Decap
sKey, 
MlKem768EncapsKey, 
MlKem768Keypair},
  |       
^^^^^^^^^^^^^^^^^
8 | 
...n::{Ed25519Keypair, 
Ed25519PublicKey, 
Ed25519SecretKey},
  |                    
                      
^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-identity\src
\keypair.rs:11:15
   |
11 | ...::{Zeroize, 
ZeroizeOnDrop};
   |       ^^^^^^^  
^^^^^^^^^^^^^

warning: 
`zero-identity` (lib) 
generated 2 warnings 
(run `cargo fix --lib 
-p zero-identity` to 
apply 2 suggestions)
    Checking 
zero-ratchet v1.0.0 (C:
\Users\Revanth\Download
s\ZERO\zero-ratchet)
    Checking 
zero-transport v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-transport
)
    Checking 
zero-handshake v1.0.0 (
C:\Users\Revanth\Downlo
ads\ZERO\zero-handshake
)
warning: unused 
import: `xor_distance`
 --> zero-dht\src\kbuck
et.rs:3:13
  |
3 | 
...::{xor_distance, 
N...
  |       ^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
import: `ed25519_sign`
  --> zero-dht\src\node
_record.rs:12:46
   |
12 | ...e, 
ed25519_sign, e...
   |       ^^^^^^^^^^^^

warning: unused 
import: `K_BUCKET_SIZE`
 --> zero-dht\src\routi
ng_table.rs:4:34
  |
4 | ...o, 
K_BUCKET_SIZE},
  |       ^^^^^^^^^^^^^

warning: `zero-dht` 
(lib) generated 3 
warnings (run `cargo 
fix --lib -p zero-dht` 
to apply 3 suggestions)
warning: unused 
import: 
`std::sync::Arc`
  --> zero-transport\sr
c\quic.rs:12:5
   |
12 | use 
std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: `Deserialize` 
and `Serialize`
  --> zero-handshake\sr
c\noise.rs:12:13
   |
12 | use 
serde::{Deserialize, 
Serialize};
   |             
^^^^^^^^^^^  ^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

warning: unused 
imports: 
`AEAD_KEY_SIZE`, 
`X25519SecretKey`, and 
`X25519SharedSecret`
  --> zero-handshake\sr
c\noise.rs:14:50
   |
14 |     
aead::{decrypt, 
encrypt, AeadKey, 
AeadNonce, 
AEAD_KEY_SIZE},
   |                   
                       
        ^^^^^^^^^^^^^
15 |     
dh::{X25519Keypair, 
X25519PublicKey, 
X25519SecretKey, 
X25519SharedSecret},
   |                   
                       
^^^^^^^^^^^^^^^  
^^^^^^^^^^^^^^^^^^

warning: unused 
import: `zero_identity:
:keypair::ZeroKeypair`
  --> zero-handshake\sr
c\noise.rs:19:5
   |
19 | use zero_identity:
:keypair::ZeroKeypair;
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^

warning: unused 
imports: 
`ZeroizeOnDrop` and 
`Zeroize`
  --> zero-ratchet\src\
state.rs:14:15
   |
14 | use 
zeroize::{Zeroize, 
ZeroizeOnDrop};
   |               
^^^^^^^  ^^^^^^^^^^^^^
   |
   = note: `#[warn(unus
ed_imports)]` (part of 
`#[warn(unused)]`) on 
by default

error[E0277]: the 
trait bound 
`quinn::Incoming: 
Default` is not 
satisfied
  --> zero-transport\sr
c\quic.rs:38:24
   |
38 |         let 
incoming = 
Default::default(); // 
Stub
   |                   
     
^^^^^^^^^^^^^^^^^^ the 
trait `Default` is not 
implemented for 
`quinn::Incoming`

warning: unused 
variable: `re`
   --> zero-handshake\s
rc\noise.rs:276:13
    |
276 |         let re = 
self.remote_ephemeral.a
s_ref().unwrap().clone(
);
    |             ^^ 
help: if this is 
intentional, prefix it 
with an underscore: 
`_re`
    |
    = note: `#[warn(unu
sed_variables)]` (part 
of `#[warn(unused)]`) 
on by default

For more information 
about this error, try 
`rustc --explain 
E0277`.
warning: 
`zero-transport` (lib) 
generated 1 warning
error: could not 
compile 
`zero-transport` (lib) 
due to 1 previous 
error; 1 warning 
emitted
warning: build failed, 
waiting for other jobs 
to finish...
error: missing 
documentation for a 
struct field
  --> zero-handshake\sr
c\error.rs:30:21
   |
30 |     MessageLength 
{ expected: usize, 
got: usize },
   |                   
  ^^^^^^^^^^^^^^^
   |
note: the lint level 
is defined here
  --> zero-handshake\sr
c\lib.rs:15:9
   |
15 | 
#![deny(missing_docs)]
   |         
^^^^^^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-handshake\sr
c\error.rs:30:38
   |
30 |     MessageLength 
{ expected: usize, 
got: usize },
   |                   
                   
^^^^^^^^^^

error: missing 
documentation for an 
associated function
  --> zero-handshake\sr
c\x3dh.rs:38:5
   |
38 |     pub fn new() 
-> Self {
   |     
^^^^^^^^^^^^^^^^^^^^

error: missing 
documentation for a 
method
  --> zero-handshake\sr
c\x3dh.rs:42:5
   |
42 | /     pub fn 
initiate(
43 | |         &self,
44 | |         
alice_keypair: 
&ZeroKeypair,
45 | |         
bob_bundle: &KeyBundle,
46 | |     ) -> Result<
(ZkxInitMessage, 
MasterSecret), 
HandshakeError> {
   | |_________________
_______________________
_______________________
^

error: missing 
documentation for a 
struct
  --> zero-handshake\sr
c\x3dh.rs:99:1
   |
99 | pub struct 
X3dhResponder;
   | ^^^^^^^^^^^^^^^^^^
^^^^^^

error: missing 
documentation for an 
associated function
   --> zero-handshake\s
rc\x3dh.rs:102:5
    |
102 | /     pub fn 
respond(
103 | |         
bob_keypair: 
&ZeroKeypair,
104 | |         
bob_bundle_owned: &mut 
zero_identity::bundle::
OwnedKeyBundle,
105 | |         
init_msg: 
&ZkxInitMessage,
106 | |     ) -> 
Result<MasterSecret, 
HandshakeError> {
    | |________________
_______________________
______^

warning: 
`zero-handshake` (lib) 
generated 4 warnings
error: could not 
compile 
`zero-handshake` (lib) 
due to 6 previous 
errors; 4 warnings 
emitted
warning: constant 
`MAX_SKIP` is never 
used
  --> zero-ratchet\src\
state.rs:17:7
   |
17 | const MAX_SKIP: 
usize = 1000;
   |       ^^^^^^^^
   |
   = note: 
`#[warn(dead_code)]` 
(part of 
`#[warn(unused)]`) on 
by default

warning: constant 
`HK_SIZE` is never used
  --> zero-ratchet\src\
state.rs:19:7
   |
19 | const HK_SIZE: 
usize = 32;
   |       ^^^^^^^

warning: constant 
`RK_SIZE` is never used
  --> zero-ratchet\src\
state.rs:21:7
   |
21 | const RK_SIZE: 
usize = 64;
   |       ^^^^^^^

warning: constant 
`CK_SIZE` is never used
  --> zero-ratchet\src\
state.rs:23:7
   |
23 | const CK_SIZE: 
usize = 32;
   |       ^^^^^^^

warning: constant 
`MK_SIZE` is never used
  --> zero-ratchet\src\
state.rs:25:7
   |
25 | const MK_SIZE: 
usize = 32;
   |       ^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-ratchet\src\
error.rs:22:25
   |
22 |     
UnknownMessageKey { 
counter: u32 },
   |                   
      ^^^^^^^^^^^^
   |
note: the lint level 
is defined here
  --> zero-ratchet\src\
lib.rs:15:9
   |
15 | 
#![deny(missing_docs)]
   |         
^^^^^^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-ratchet\src\
error.rs:26:26
   |
26 |     
TooManySkippedKeys { 
skipped: usize, max: 
usize },
   |                   
       ^^^^^^^^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-ratchet\src\
error.rs:26:42
   |
26 |     
TooManySkippedKeys { 
skipped: usize, max: 
usize },
   |                   
                       
^^^^^^^^^^

error: missing 
documentation for an 
associated function
  --> zero-ratchet\src\
skipped_keys.rs:27:5
   |
27 |     pub fn new() 
-> Self {
   |     
^^^^^^^^^^^^^^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-ratchet\src\
state.rs:83:5
   |
83 |     pub header: 
EncryptedHeader,
   |     ^^^^^^^^^^^^^^
^^^^^^^^^^^^^

error: missing 
documentation for a 
struct field
  --> zero-ratchet\src\
state.rs:84:5
   |
84 |     pub 
ciphertext: Vec<u8>,
   |     
^^^^^^^^^^^^^^^^^^^^^^^

error: missing 
documentation for a 
method
   --> zero-ratchet\src
\state.rs:153:5
    |
153 |     pub fn 
encrypt(&mut self, 
plaintext: &[u8], 
associated_data: 
&[u8]) -> 
Result<RatchetMessage, 
RatchetError> {
    |     ^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^

error: missing 
documentation for a 
method
   --> zero-ratchet\src
\state.rs:184:5
    |
184 | /     pub fn 
decrypt(
185 | |         &mut 
self,
186 | |         msg: 
&RatchetMessage,
187 | |         
associated_data: &[u8],
188 | |         
now_secs: u64,
189 | |     ) -> 
Result<Vec<u8>, 
RatchetError> {
    | |________________
______________________^

warning: 
`zero-ratchet` (lib) 
generated 6 warnings
error: could not 
compile `zero-ratchet` 
(lib) due to 8 
previous errors; 6 
warnings emitted
